Finished home page, alignment next

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
@@ -14,4 +15,13 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
+  <style>
+    body, html {
+      margin-left: 0px;
+      margin-top: 0px;
+      margin-right:0px;
+    } 
+
+  </style>
 </html>
