--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>
+      class PythonAddict's Portfolio
+    </title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <h2>I'm sorry but my portfolio doesn't work properly without JavaScript enabled. Please enable it to continue!</h2>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
@@ -22,6 +24,14 @@
       margin-top: 0px;
       margin-right:0px;
     } 
-
+    
+    noscript h2 {
+      position: absolute;
+      width: 100%;
+      text-align: center;
+      top: 0%;
+      left: 50%;
+      transform: translate(-50%, 100%);
+    }
   </style>
 </html>
