--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
     body, html {
       margin-left: 0px;
       margin-top: 0px;
-      margin-right:0px;
+      margin-right: 0px;
+			margin-bottom: 0px;
     } 
     
     noscript h2 {
